# Artificial-intelligence-project

./: .dockerignore  .gitignore  Dockerfile  README.md  data_load.ipynb  data_load.py  docker-compose.yml  instruction.md  main.ipynb  main.py  pyproject.toml  requirements.txt  run-api.bat  run-api.ps1  test.ipynb
artifacts/: classification_ax_model.pt  classification_co_model.pt  classification_sa_model.pt
astifacts/stats/: classification_ax_256.json
src/: __init__.py  config.py
src/data/: classification.py  segmentation.py
src/models/: classification.py  legacy_aip_v1.py  segmentation.py
src/training/: classification.py  classification_fast.py  segmentation.py  segmentation_fast.py  train_models.py
src/tumor_app/: __init__.py  api.py  cli.py  infer.py
src/tumor_app/static/: index.html
src/utils/: checkpoint.py  plots.py  prefetch.py  runtime_tune.py
